# HelloSockets

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
Client/: CMakeLists.txt  Client.cpp  Client.vcxproj
Client/Source/: Client.cpp  Connection.h  UnixClient.cpp  UnixClient.h  WinsockClient.cpp  WinsockClient.h
HelloSockets/: HelloSockets.sln
HelloSockets/Client/: Client.vcxproj
HelloSockets/Server/: Server.vcxproj  Server.vcxproj.filters
Server/: CMakeLists.txt  Server.vcxproj
Server/Source/: Server.cpp  UnixServer.cpp  UnixServer.h  WinsockServer.cpp  WinsockServer.h
